[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/guion/director/Director.gd" type="Script" id=1]
[ext_resource path="res://addons/guion/director/SaveLoad.gd" type="Script" id=2]
[ext_resource path="res://addons/guion/director/Stage.gd" type="Script" id=3]
[ext_resource path="res://addons/guion/director/ConsoleServer.gd" type="Script" id=4]
[ext_resource path="res://addons/guion/director/Camera.gd" type="Script" id=5]
[ext_resource path="res://addons/guion/director/Processor.gd" type="Script" id=7]
[ext_resource path="res://addons/guion/director/Blackout.gd" type="Script" id=8]
[ext_resource path="res://addons/guion/reader/Reader.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "endBlackout"

[sub_resource type="Animation" id=2]
resource_name = "startBlackout"

[node name="Director" type="Node"]
script = ExtResource( 1 )
minor_version = 1
patch_version = 2

[node name="SaveLoad" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Stage" type="Node" parent="SaveLoad"]
script = ExtResource( 3 )

[node name="Camera3D" type="Node" parent="SaveLoad/Stage"]
script = ExtResource( 5 )

[node name="Reader" parent="SaveLoad/Stage" instance=ExtResource( 9 )]

[node name="Processor" type="Node" parent="SaveLoad/Stage"]
script = ExtResource( 7 )

[node name="PopUps" type="CanvasLayer" parent="SaveLoad/Stage"]

[node name="Blackout" type="ColorRect" parent="SaveLoad/Stage/PopUps"]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="SaveLoad/Stage/PopUps/Blackout"]
anims/endBlackout = SubResource( 1 )
anims/startBlackout = SubResource( 2 )

[node name="AutoSaveTimer" type="Timer" parent="SaveLoad"]

[node name="ConsoleServer" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Logic" type="Node" parent="."]

[connection signal="game_viewport_changed" from="SaveLoad" to="ConsoleServer" method="_on_SaveLoad_game_viewport_changed"]
[connection signal="load_ready" from="SaveLoad" to="SaveLoad/Stage" method="_on_SaveLoad_load_ready"]
[connection signal="scene_change_started" from="SaveLoad/Stage" to="SaveLoad" method="_on_Stage_scene_change_started"]
